added titles to panels

--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
                                 <div class="container nmpanel p-2 mb-5">
                                     <img src="images/curry.jpg">
                                     <div class="nmpaneltxt">
-                                        After 4 games, the Warriors led 3-1.
-                                        No NBA teams this behind
-                                        had made a comeback before 
-                                        in the NBA Finals.
+                                        <h1>GAME 4</h1>
+                                        <p>After 4 games, the Warriors led 3-1.
+                                            No NBA teams in history
+                                            had made such a comeback before 
+                                            in the NBA Finals.</p>
                                     </div>
                                 </div>
                             </div>
@@ -170,9 +171,11 @@
                                 <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game5.png">
                                     <div class="nmpaneltxt">
-                                        But Kyrie & Lebron would each 
-                                        had 41 points to extend the series
-                                        in game 5.
+                                        <h1>GAME 5</h1>
+                                        <p>Despite doubters and skepticism,
+                                            Kyrie & Lebron would each 
+                                           had 41 points to keep Cavs alive
+                                           in game 5.</p>
                                     </div>
                                 </div>
                             </div>
@@ -180,8 +183,9 @@
                                 <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game6.jpg">
                                     <div class="nmpaneltxt">
-                                        In game 6, the Cavs avoided elimination
-                                        as Lebron scored another 41 points.
+                                        <h1>GAME 6</h1>
+                                        <p>In game 6, the Cavs avoided elimination
+                                            as Lebron scored another 41 points.</p>
                                     </div>
                                 </div>
                             </div>
@@ -189,9 +193,11 @@
                                 <div class="container nmpanel p-2 mb-5">
                                     <img src="images/matchup/game7.jpg">
                                     <div class="nmpaneltxt">
-                                        Game 7, everyone was glued to their seats
-                                        as the score was 89-89 for 3 minutes, which
-                                        seemed like 5 years.
+                                        <h1>GAME 7</h1>
+                                        <p>Everyone was glued to their seats
+                                            as the score was 89-89 for 3 minutes, which
+                                            seemed like 5 years.</p>
+                                        
                                     </div>
                                 </div>
                             </div>
