beautified panels for matchup section

--- a/index.html
+++ b/index.html
@@ -150,21 +150,63 @@
             <!-- 
                 add designs/colors
              -->
-             <div class="col-12 m-0 p-0 gbor hundred" id="matchup2">
+             <div class="row"><h1>NBA FINALS 2016</h1></div>
+             
+
+
+
+             <div class="col-12 m-0 p-0  hundred" id="matchup2">
                 <div class="row justify-content-center m-0 p-0">
-                    <div class="col-12 col-md-6 gbor third">
+                    <div class="col-12 col-md-6 ">
                         <div class="row m-0 ">
-                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 wine"><img src="images/curry.jpg"></div>
-                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 blue">a</div>
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <img src="images/curry.jpg">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <h1>GAME 4</h1>
+                                <p>After 4 games, the Warriors led 3-1.
+                                    No NBA teams in history
+                                    had made such a comeback before 
+                                    in the NBA Finals.</p></div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
-                    <div class="col-12 col-md-6 gbor third"></div>
+                    <div class="col-12 col-md-6 ">
+                        <div class="row m-0 ">
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <img src="images/matchup/game5.png">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <h1>GAME 5</h1>
+                                <p>Despite doubters and skepticism,
+                                    Kyrie & Lebron would each 
+                                   had 41 points to keep Cavs alive.</p></div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 ">
+                        <div class="row m-0 ">
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <img src="images/matchup/game6.jpg">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <h1>GAME 6</h1>
+                                <p>In game 6, the Cavs avoided elimination
+                                    as Lebron scored another 41 points.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 ">
+                        <div class="row m-0 ">
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <img src="images/matchup/game7.jpg">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
+                                <h1>GAME 7</h1>
+                                <p>Everyone was glued to their seats
+                                    as the score was tied 89-89 for 3 minutes, which
+                                    seemed like 5 years.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>   
             </div>
             
