--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <div class="container m-0" id="fr3">
                 <div class="row m-0">
-                    <div class="d-none d-md-block col-4 gbor order-1">
+                    <div class="d-none d-md-block col-4 order-1">
                         <div class="container" id="resume2">
                             <div class="container gline">
                                 <h5>2003</h5>
@@ -104,23 +104,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-none d-md-block col-4 gbor order-2">
+                    <div class="d-none d-md-block col-4 order-2">
                         <img id="bron3lg" src="images/failures/bron3.png" alt="bron3">
                     </div>
-                    <div class="d-none d-md-block col-4 gbor order-3">
+                    <div class="d-none d-md-block col-4 order-3">
                         <h1 id="namelg1">Lebron</h1>
                         <h1 id="namelg2">James</h1>
                     </div>
                 </div>
                 <div class="row m-0">
-                    <div class="d-md-none col-4 gbor order-4">
-                        <h1>Lebron James</h1>
+                    <div class="d-md-none col-4 order-4">
+                        <h1 id="namesm1">Lebron</h1>
                     </div>
-                    <div class="d-md-none col-4 gbor order-5 order-md-6"><img src="images/failures/bron3.png" alt="bron3"></div>
-                    <div class="col-4 gbor order-6 order-md-5"></div>
+                    <div class="d-md-none col-4 order-5 order-md-6"><img src="images/failures/bron3.png" alt="bron3"></div>
+                    <div class="d-md-none col-4 order-6 order-md-5">
+                        <h1 id="namesm2">James</h1>
+                    </div>
                 </div>
                 <div class="row m-0">
-                    <div class="d-md-none col-md-4 gbor order-7">
+                    <div class="d-md-none col-md-4 order-7">
                         <div class="container" id="resume">
                             <div class="container gline">
                                 <h5>2003</h5>
@@ -144,8 +146,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 gbor order-8"></div>
-                    <div class="d-none d-md-block third col-md-4 gbor order-9"></div>
+                    <div class="col-md-4 order-8"></div>
+                    <div class="d-none d-md-block third col-md-4 order-9"></div>
                 </div>
             </div>
             
@@ -180,7 +182,8 @@
                                 <h1>GAME 4</h1>
                                 <p>After 4 games, the Warriors led 3-1.
                                     No NBA teams in history
-                                    had made a comeback before.</p></div>
+                                    had made a comeback before in a best of 7 series.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -216,7 +219,7 @@
                                 <h1>GAME 7</h1>
                                 <p>Everyone was glued to their seats
                                     as the score was tied 89-89 for 3 minutes, which
-                                    seemed like 5 years.</p>
+                                    seemed like years.</p>
                             </div>
                         </div>
                     </div>
