shortened game 6 text

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                             </div>
                             <div class="col-12 col-sm-6 col-md-12 col-lg-6 ">
                                 <h1>GAME 5</h1>
-                                <p>Despite doubters and skepticism,
+                                <p>Despite doubts and hate,
                                     Kyrie & Lebron would each 
-                                   had 41 points to keep Cavs alive.</p></div>
+                                   score 41 points to keep Cavs alive.</p></div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
@@ -186,8 +186,8 @@
                             </div>
                             <div class="col-12 col-sm-6 col-md-12 col-lg-6">
                                 <h1>GAME 6</h1>
-                                <p>In game 6, the Cavs avoided elimination
-                                    as Lebron scored another 41 points.</p>
+                                <p>The Cavs avoided elimination
+                                    as Lebron led with another 41 points.</p>
                             </div>
                         </div>
                     </div>
