--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 order-8"></div>
+                    <div class="col-md-4 order-8 mb-5"></div>
                     <div class="d-none d-md-block third col-md-4 order-9"></div>
                 </div>
             </div>
@@ -210,20 +210,20 @@
           
 
             <div class="col-12" id="court">
-                <div class="row m-0 gbor">
-                    <div class="col-4">1</div>
-                    <div class="col-4">2</div>
-                    <div class="col-4">3</div>
+                <div class="row m-0">
+                    <div class="col-4 gbor">1</div>
+                    <div class="col-4 gbor">2</div>
+                    <div class="col-4 gbor">3</div>
                 </div>
-                <div class="row m-0 gbor">
-                    <div class="col-4">4</div>
-                    <div class="col-4">5</div>
-                    <div class="col-4">6</div>
+                <div class="row m-0">
+                    <div class="col-4 gbor">4</div>
+                    <div class="col-4 gbor">5</div>
+                    <div class="col-4 gbor">6</div>
                 </div>
-                <div class="row m-0 gbor">
-                    <div class="col-4">7</div>
-                    <div class="col-4">8</div>
-                    <div class="col-4">9</div>
+                <div class="row m-0">
+                    <div class="col-4 gbor">7</div>
+                    <div class="col-4 gbor">8</div>
+                    <div class="col-4 gbor">9</div>
                 </div>
             </div>
            
