--- a/index.html
+++ b/index.html
@@ -257,6 +257,22 @@
                 </div>
             </div>
 
+            <div class="container-fluid">
+                <div class="row justify-content-center gbor">
+                    <div class="mt-5" id="mycourt">
+                        <div id="box4"></div>
+                        <div class="circlewar"></div>
+                        <div id="war3"></div>
+                        <div class="circle"></div>
+                        <div id="courtline"></div>
+                        <div id="midline"></div>
+                        <div id="box6"></div>
+                        <div class="circlecavs"></div>
+                        <div id="cavs3"></div>
+                   </div>
+                </div>
+            </div>
+
 
 
            <!-- <div class="mt-5" id="mycourt">
