added rematch info layout

--- a/index.html
+++ b/index.html
@@ -147,34 +147,85 @@
             </div>
             
 
+            <div class="container-fluid gbor" id="rematch">
+                <div class="row">
+                    <div class="col-12 p-3 m-3">
+                        <h1>NBA Finals 2016: The Rematch</h1>
+                        <h6>The Cavs and Warriors met at finals again. 
+                        <br>But why were the Warriors heavily favored?</h6>
+                    </div>
+                </div>
 
-            <div>
-                <h1>NBA Finals 2016: The Rematch</h1>
-                <h3>Why were the warriors heavily favored?</h3>
-            </div>
+                <!-- <div class="container-fluid">
+                    <div class="row justify-content-center gbor">
+                        <div id="mycourt">
+                            <div id="box4"></div>
+                            <div class="circlewar"></div>
+                            <div id="war3"></div>
+                            <div class="circle"></div>
+                            <div id="courtline"></div>
+                            <div id="midline"></div>
+                            <div id="box6"></div>
+                            <div class="circlecavs"></div>
+                            <div id="cavs3"></div>
+                    </div>
+                    </div>
+                </div> -->
 
-            <div class="container-fluid">
-                <div class="row justify-content-center gbor">
-                    <div class="mt-5" id="mycourt">
-                        <div id="box4"></div>
-                        <div class="circlewar"></div>
-                        <div id="war3"></div>
-                        <div class="circle"></div>
-                        <div id="courtline"></div>
-                        <div id="midline"></div>
-                        <div id="box6"></div>
-                        <div class="circlecavs"></div>
-                        <div id="cavs3"></div>
-                   </div>
+                <div class="container-fluid mt-5">
+                    <div class="row justify-content-around p-0 m-0">
+                        <div class="col-4 gbor">1</div>
+                        <div class="col-4 gbor">2</div>
+                        <div class="col-4 gbor">3</div>
+                    </div>
+                    <div class="row justify-content-around p-0 m-0">
+                        <div class="col-4 gbor">4</div>
+                        <div class="col-4 gbor">
+                            <div class="row justify-content-center gbor">
+                                <div id="mycourt">
+                                    <div id="box4"></div>
+                                    <div class="circlewar"></div>
+                                    <div id="war3"></div>
+                                    <div class="circle"></div>
+                                    <div id="courtline"></div>
+                                    <div id="midline"></div>
+                                    <div id="box6"></div>
+                                    <div class="circlecavs"></div>
+                                    <div id="cavs3"></div>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="col-4 gbor">6</div>
+                    </div>
+                    <div class="row justify-content-around p-0 m-0">
+                        <div class="col-4 gbor">7</div>
+                        <div class="col-4 gbor">8</div>
+                        <div class="col-4 gbor">9</div>
+                    </div>
                 </div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             <!-- 2016 NBA Finals Matchup -->
             <!-- 
                 add designs/colors
              -->
 
-            <div class="col-12 m-0 mb-5 p-0" id="matchup2">
+            <div class="col-12 mt-5 mb-5 p-0" id="matchup2">
                 <div class="row justify-content-center m-0 p-4">
                     <div class="col-12 col-md-6 mb-5">
                         <div class="row p-2 m-0 mb-5 nmize">
