added hero imgs for rematch section

--- a/index.html
+++ b/index.html
@@ -147,12 +147,10 @@
             </div>
             
 
-            <div class="container-fluid gbor" id="rematch">
+            <div class="container-fluid" id="rematch">
                 <div class="row">
                     <div class="col-12 p-3 m-3">
                         <h1>NBA Finals 2016: The Rematch</h1>
-                        <h6>The Cavs and Warriors met at finals again. 
-                        <br>But why were the Warriors heavily favored?</h6>
                     </div>
                 </div>
 
@@ -172,11 +170,17 @@
                     </div>
                 </div> -->
 
-                <div class="container-fluid mt-5">
+                <div class="container-fluid mt-5 gbor">
                     <div class="row justify-content-around p-0 m-0">
-                        <div class="col-4 gbor">1</div>
-                        <div class="col-4 gbor">2</div>
-                        <div class="col-4 gbor">3</div>
+                        <div class="col-4 gbor">
+                            <img src="images/rematch/bron6.png" alt="bronrm" id="bronrm">
+                        </div>
+                        <div class="col-4 gbor">
+                            2
+                        </div>
+                        <div class="col-4 gbor">
+                            <img src="images/rematch/curry1.png" alt="curryrm" id="curryrm">
+                        </div>
                     </div>
                     <div class="row justify-content-around p-0 m-0">
                         <div class="col-4 gbor">4</div>
