added gold color font to headings

--- a/index.html
+++ b/index.html
@@ -148,29 +148,11 @@
             
 
             <div class="container-fluid m-0 p-0" id="rematch">
-               
-
-                <!-- <div class="container-fluid">
-                    <div class="row justify-content-center gbor">
-                        <div id="mycourt">
-                            <div id="box4"></div>
-                            <div class="circlewar"></div>
-                            <div id="war3"></div>
-                            <div class="circle"></div>
-                            <div id="courtline"></div>
-                            <div id="midline"></div>
-                            <div id="box6"></div>
-                            <div class="circlecavs"></div>
-                            <div id="cavs3"></div>
-                    </div>
-                    </div>
-                </div> -->
-
-                <div class="container-fluid m-0 p-0 gbor">
+                <div class="container-fluid m-0 p-0">
                     <div class="row justify-content-around p-0 m-0">
-                        <div class="col-4 col-sm-6 d-none d-sm-block gbor">
+                        <div class="col-4 col-sm-6 d-md-none d-none d-sm-block">
                             <div class="container p-0 m-0">
-                                <h1>NBA Finals 2016: The Rematch</h1>
+                                <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
                                 <p>The 2 teams met again in 2016.
                                 </p>
                                 <p>But the Warriors were the heavy favorites to win.
@@ -180,20 +162,19 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-4 d-sm-none gbor">
-                            <!-- <img class="d-none" src="images/rematch/2015champs.jpg" alt="champs15" id="champs15"> -->
+                        <div class="col-4 d-sm-none">
                             <img src="images/rematch/curry1.png" alt="curryrm" id="curryrm">
                             <img src="images/rematch/bron6.png" alt="bronrm" id="bronrm">
                         </div>
-                        <div class="col-4 d-none d-sm-block col-sm-2 gbor">
+                        <div class="col-4 d-none d-sm-block d-md-none col-sm-2">
                             <img src="images/rematch/curry1.png" alt="curryrm" id="curryrmlg">
                             <img src="images/rematch/bron6.png" alt="bronrm" id="bronrmlg">
                         </div>
                     </div>
                     <div class="row justify-content-around p-0 m-0">
                         <div class="col-12 d-sm-none p-0 m-0">
-                            <div class="container p-0 m-0">
-                                <h1>NBA Finals 2016: The Rematch</h1>
+                            <div class="container p-3 m-0">
+                                <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
                                 <p>The 2 teams met again in 2016.
                                 </p>
                                 <p>But the Warriors were the heavy favorites to win.
@@ -203,15 +184,36 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-4 d-none gbor">
-                            5
+                        <div class="col-4 d-none d-md-block col-md-4 d-xl-none">
+                            <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
+                            <p>The 2 teams met again in 2016.
+                            </p>
+                            <p>But the Warriors were the heavy favorites to win.
+                            </p>
+                            <p>They broke the best NBA record with only 9 
+                                losses in a 82-games season.
+                            </p>
                         </div>
-                        <div class="col-4 d-none gbor">6</div>
+                        <div class="col-4 d-none d-md-block d-xl-none col-md-2">
+                            <img src="images/rematch/curry1.png" alt="curryrm" id="curryrmlg">
+                            <img src="images/rematch/bron6.png" alt="bronrm" id="bronrmlg">
+                        </div>
                     </div>
                     <div class="row justify-content-around p-0 m-0">
-                        <div class="col-4 gbor">7</div>
-                        <div class="col-4 gbor">8</div>
-                        <div class="col-4 gbor">9</div>
+                        <div class="col-4 d-none d-xl-block col-xl-3">
+                            <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
+                            <p>The 2 teams met again in 2016.
+                            </p>
+                            <p>But the Warriors were the heavy favorites to win.
+                            </p>
+                            <p>They broke the best NBA record with only 9 
+                                losses in a 82-games season.
+                            </p>
+                        </div>
+                        <div class="col-4 col-xl-8 d-none d-xl-block">
+                            <img src="images/rematch/bronback.jpg" alt="redemption" id="redemption">
+                        </div>
+                        <div class="col-4 d-none"></div>
                     </div>
                 </div>
             </div>
@@ -234,7 +236,7 @@
                     <div id="box6"></div>
                     <div class="circlecavs"></div>
                     <div id="cavs3"></div>
-            </div>
+                </div>
             </div>
 
 
