--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="col-4 col-sm-6 d-md-none d-none d-sm-block">
                             <div class="container p-0 m-0">
                                 <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
-                                <p>The 2 teams met again in 2016.
+                                <p>A rematch between these 2 teams was inevitable.
                                 </p>
                                 <p>But the Warriors were the heavy favorites to win.
                                 </p>
@@ -175,7 +175,7 @@
                         <div class="col-12 d-sm-none p-0 m-0">
                             <div class="container p-3 m-0">
                                 <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
-                                <p>The 2 teams met again in 2016.
+                                <p>A rematch between these 2 teams was inevitable.
                                 </p>
                                 <p>But the Warriors were the heavy favorites to win.
                                 </p>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="col-4 d-none d-md-block col-md-4 d-xl-none">
                             <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
-                            <p>The 2 teams met again in 2016.
+                            <p>A rematch between these 2 teams was inevitable.
                             </p>
                             <p>But the Warriors were the heavy favorites to win.
                             </p>
@@ -202,7 +202,7 @@
                     <div class="row justify-content-around p-0 m-0">
                         <div class="col-4 d-none d-xl-block col-xl-3">
                             <h1>NBA <span class="goldw">Finals</span> 2016: The Rematch</h1>
-                            <p>The 2 teams met again in 2016.
+                            <p>A rematch between these 2 teams was inevitable.
                             </p>
                             <p>But the Warriors were the heavy favorites to win.
                             </p>
