added bouncing basketball

--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
 
 
 
+            
 
-
-
-
-
-            <div class="row justify-content-center gbor">
+            <div class="row justify-content-center">
+                
                 <div id="mycourt">
                     <div id="box4"></div>
                     <div class="circlewar"></div>
                     <div id="war3"></div>
-                    <div class="circle"></div>
+                    <div class="circle">
+                        <i class="fas fa-basketball-ball bounce"></i>
+                    </div>
                     <div id="courtline"></div>
                     <div id="midline"></div>
                     <div id="box6"></div>
@@ -238,6 +238,9 @@
                     <div id="cavs3"></div>
                 </div>
             </div>
+
+
+ 
 
 
 
@@ -250,7 +253,7 @@
                 add designs/colors
              -->
 
-            <div class="col-12 mt-5 mb-5 p-0" id="matchup2">
+            <div class="col-12 mb-5 p-0" id="matchup2">
                 <div class="row justify-content-center m-0 p-4">
                     <div class="col-12 col-md-6 mb-5">
                         <div class="row p-2 m-0 mb-5 nmize">
