--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
             
-
+            <!-- rematch -->
             <div class="container-fluid m-0 p-0" id="rematch">
                 <div class="container-fluid m-0 p-0">
                     <div class="row justify-content-around p-0 m-0">
