improved text size on mobile for 2nd page

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                     NBA Finals but lost to the Spurs.
                                 </p>
                                 <h5>2010-2014</h5>
-                                <p>Went to NBA Finals with the Miami 
-                                    Heat 4 times but failed twice.
+                                <p>Joined the Miami Heat and went to 
+                                    NBA Finals 4 times but failed twice.
                                 </p>
                                 <h5>2015</h5>
                                 <p>Returned to Cleveland but lost to the 
