added content, font and graphics for timeline

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" href="mycustomstyles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Bungee+Inline|PT+Sans&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" type="text/css">
     <title>Always.Believe.</title>
   </head>
@@ -69,10 +69,59 @@
             </div> 
 
             <!-- timeline -->
-            <div class="container-fluid" id="timeline">
+            <div class="container-fluid wine" id="timeline">
                 <div class="row justify-content-center">
-                    <div class="col6 col-lg-12 gbor"></div>
-                    <div class="col6 col-lg-12 gbor"></div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                        <div class="row justify-content-center">
+                            <div class="col-6">
+                                <h1>20<br>03</h1>
+                                <img id="bron03" src="images/timeline/bron2003.png" alt="bron2003">
+                            </div>
+                            <div class="col-6">
+                                    <div class="container-fluid p-0">
+                                        <p class="gline p-3">Joined the Cleveland Cavaliers as the No.1 NBA draft pick.</p>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                        <div class="row justify-content-center">
+                            <div class="col-6">
+                                <div class="container-fluid p-0">
+                                    <p class="leftp gline p-3">Brought the Cavaliers to their first NBA Finals but lost to the Spurs.</p>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <h1>20<br>07</h1>
+                                <img id="bron07" src="images/timeline/bron6.png" alt="bron2007">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                        <div class="row justify-content-center">
+                            <div class="col-6">
+                                <h1>20<br>14</h1>
+                                <img id="bronmia" src="images/timeline/miamibron.png" alt="bron2010">
+                            </div>
+                            <div class="col-6">
+                                <div class="container-fluid p-0">
+                                    <p class="wline">Joined the Miami Heat and went to NBA Finals 4 times but failed twice.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                        <div class="row justify-content-center">
+                            <div class="col-6">
+                                <div class="container-fluid p-0">
+                                    <p class="wline p-2">Returned to Cleveland but lost to the Golden State Warriors in the NBA Finals.</p>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <h1>20<br>15</h1>
+                                <img id="bron15" src="images/timeline/bron3.png" alt="bron2015">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
