--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- timeline -->
             <div class="container-fluid wine" id="timeline">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                    <div class="col-12 col-lg-6 col-xl-3 mb-5 mt-5 p-1">
                         <div class="row justify-content-center">
                             <div class="col-6">
                                 <h1>20<br>03</h1>
@@ -84,40 +84,40 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                    <div class="col-12 col-lg-6 col-xl-3 mb-5 mt-5 p-1">
                         <div class="row justify-content-center">
-                            <div class="col-6">
+                            <div class="col-6 order-1 order-lg-2">
                                 <div class="container-fluid p-0">
                                     <p class="leftp gline p-3">Brought the Cavaliers to their first NBA Finals but lost to the Spurs.</p>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-6 order-2 order-lg-1">
                                 <h1>20<br>07</h1>
                                 <img id="bron07" src="images/timeline/bron6.png" alt="bron2007">
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                    <div class="col-12 col-lg-6 col-xl-3 mb-5 mt-5 p-1">
                         <div class="row justify-content-center">
                             <div class="col-6">
-                                <h1>20<br>14</h1>
+                                <h1>20<br>10</h1>
                                 <img id="bronmia" src="images/timeline/miamibron.png" alt="bron2010">
                             </div>
                             <div class="col-6">
                                 <div class="container-fluid p-0">
-                                    <p class="wline">Joined the Miami Heat and went to NBA Finals 4 times but failed twice.</p>
+                                    <p class="gline p-3">Joined the Miami Heat and went to NBA Finals 4 times but failed twice.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-3 mb-5 mt-5 p-1">
+                    <div class="col-12 col-lg-6 col-xl-3 mb-5 mt-5 p-1">
                         <div class="row justify-content-center">
-                            <div class="col-6">
+                            <div class="col-6 order-1 order-lg-2">
                                 <div class="container-fluid p-0">
-                                    <p class="wline p-2">Returned to Cleveland but lost to the Golden State Warriors in the NBA Finals.</p>
+                                    <p class="gline p-3">Returned to Cleveland but lost to the Golden State Warriors in the NBA Finals.</p>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-6 order-2 order-lg-1">
                                 <h1>20<br>15</h1>
                                 <img id="bron15" src="images/timeline/bron3.png" alt="bron2015">
                             </div>
