--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                             </div>
                         </div>
                     </div>
+                    <object id="rematchsvg" type="image/svg+xml" class="gold" data="images/timeline/rematch.svg"></object>
                 </div>
             </div>
 
