fixed prologue lin to timeline

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <p class="fadeIn1" id="c01">&nbsp On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p class="fadeIn2" id="c02">&nbsp From that day on, the city of Cleveland would not see another major sports championship.</p> 
                 <h1 class="fadeIn3" id="c03">for over 50 years.</h1>  
-                <a href="#fr3"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                <a href="#timeline"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div> 
 
             <!-- timeline -->
-            <div class="container-fluid wine" id="timeline">
+            <div class="container-fluid wine m-0 p-0" id="timeline">
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-6 col-xl-3 mb-5 mt-5 p-1">
                         <div class="row justify-content-center">
