--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="container-fluid p-0 m-0">
         <section class="row justify-content-center white d-flex p-0 m-0">
             <!-- opening -->
-            <div class="col-12 p-0 m-0 hundred gbor" id="opening">
+            <div class="col-12 p-0 m-0 hundred" id="opening">
                 <img src="images/welcome/city.jpg" id="bgimg">
                 <h1 id="heading">Always</h1>
                 <h1 id="heading2">Believe</h1>
